# video-player

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt  al_renderer.cpp  al_renderer.h  gl_renderer.cpp  gl_renderer.h  logging.cpp  logging.h  main.cpp  player_cpu.cpp  player_cpu.h  player_gpu.cpp  player_gpu.h  utils.h  window.cpp  window.h
